# journalist-helper

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  build_lambda_package.sh  lambda_function.py  main.py  pyproject.toml  triage_result.txt
.github/workflows/: run-journalist-helper.yml
src/: __init__.py  config.py  deduplication.py  nehody_uzavirky_parser.py  nemocnice_kolin_parser.py  rss_parser.py  schemas.py  telegram.py  triage.py
