[project]
name = "journalist-helper"
version = "0.1.0"
description = "A helper tool for journalists to track news items from various sources."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.12",
    "openrouter>=0.9.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.33.1",
]


[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.32",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D212",
    "D401",
    "D404",
    "D406",
    "D407",
]
